Web responsive issues (aka w-50 on mobile show content at 50% width)

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -8,7 +8,7 @@ body{
 }
 
 .bg-light-2{
-   background-color: #dadada;
+   background-color: #dadada !important;
 }
 
 .rounded-top-8{
@@ -16,5 +16,5 @@ body{
 }
 
 .rounded-8{
-    border-radius: 8px;
+    border-radius: 8px !important;
 }
